<resources>
    <string name="app_name">安缔克</string>
    <string name="password">登录密码</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="title_company_select_list">选择商家</string>
    <string name="title_check_authentication_code">身份验证</string>
    <string name="title_update_password">重置密码</string>
    <string name="unread_remind">提醒</string>
    <string name="unread_notice">公告</string>
    <string name="title_unconfirm">确认服务完成或商品收货</string>
    <string name="title_branch_list">门店</string>
    <string name="title_account_list">服务团队</string>
    <string name="title_cart">我的购物车</string>
    <string name="title_ecard_history">充值消费记录</string>
    <string name="title_ecard_balance_history">收支明细</string>
    <string name="title_commodity_name">名称</string>
    <string name="title_commodity_unit_price">零售价</string>
    <string name="title_commodity_promotion_price">促销价</string>
    <string name="title_commodity_discount_price">折扣价</string>
    <string name="title_commodity_introduction">介绍</string>
    <string name="title_commodity_branch_info">请选择购买门店</string>
    <string name="title_service_branch_name">服务门店</string>
    <string name="title_level">等级</string>
    <string name="title_specification">规格</string>
    <string name="title_balance">余额</string>
    <string name="title_balance_history">充值消费记录</string>
    <string name="title_quick_response_code">我的二维码名片</string>
    <string name="title_notice_list">公告</string>
    <string name="title_notice_detail">公告详情</string>
    <string name="title_account_detail">服务人员详情</string>
    <string name="title_commodity_detail">商品详情</string>
    <string name="title_ecard_detail">账户详情</string>
    <string name="title_ecard_list">我的账户</string>
    <string name="title_setting">设置</string>
    <string name="title_order_classify">我的订单</string>
    <string name="title_see_order">订单</string>
    <string name="title_all_order">所有订单</string>
    <string name="title_uncompleted_service">进行中的服务</string>
    <string name="title_undelivered_commodity">待接收的商品</string>
    <string name="title_password_setting">密码修改</string>
    <string name="title_order_pay">订单支付</string>
    <string name="title_remind_list">提醒</string>
    <string name="title_record_list">我的咨询记录</string>
    <string name="title_photo_album_list">美丽记录</string>
    <string name="title_order_confirm">购买详情</string>
    <string name="title_category_list">商品类目</string>
    <string name="title_order_list">订单一览</string>
    <string name="title_order_pay_list">自助付款</string>
    <string name="title_commodity_order_detail">订单详情（商品）</string>
    <string name="title_service_order_detail">订单详情（服务）</string>
    <string name="title_service_order_contact_detail">订单详情</string>
    <string name="title_treatment_deatil">操作详情</string>
    <string name="title_service_detail">服务详情</string>
    <string name="title_service_effect">操作效果</string>
    <string name="title_service_review">操作评价</string>
    <string name="before_treatment_text">操作前照片</string>
    <string name="after_treatment_text">操作后照片</string>
    <string name="title_commodity_list">商品列表</string>
    <string name="title_contact_list">飞语</string>
    <string name="title_course">课程</string>
    <string name="title_contact">联系</string>
    <string name="title_remind">提醒</string>
    <string name="title_contact_time">时间</string>
    <string name="title_start_time">开始时间</string>
    <string name="title_end_time">结束时间</string>
    <string name="title_treament_code">服务编号</string>
    <string name="title_ecard_balance">余额</string>
    <string name="title_order_quantity">订单数量</string>
    <string name="title_order_total_sale_price">应付款</string>
    <string name="title_contact_status">状态</string>
    <string name="title_contact_remark">联系记录</string>
    <string name="order_serial_number">订单编号</string>
    <string name="title_treatment_id">操作编号</string>
    <string name="order_branch">下单门店</string>
    <string name="commodity_order_time_title">下单时间</string>
    <string name="responsible_personname_title">美丽顾问</string>
    <string name="expirationtime_title">服务有效期</string>
    <string name="count_title">数量</string>
    <string name="order_unpay_amount_title">未付余额</string>
    <string name="commodity_order_totalprice_title">总计金额</string>
    <string name="title_order_price_capitalization">大写</string>
    <string name="commodity_order_status_title">订单状态</string>
    <string name="commodity_order_pay_status_title">支付状态</string>
    <string name="commodity_order_pay_detail_title">支付详情</string>
    <string name="app_list_header_refresh_down">放开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新:</string>
    <string name="wait">请稍后...</string>
    <string name="ellipsis">...</string>
    <string name="title_show_finished_list">显示已完成</string>
    <string name="title_conceal_finished_list">隐藏已完成</string>
    <string name="order_status_1">未完成</string>
    <string name="order_status_2">已完成</string>
    <string name="order_status_3">已取消</string>
    <string name="order_status_4">已终止</string>
    <string name="order_ispaid_1">未支付</string>
    <string name="order_ispaid_2">部分付</string>
    <string name="order_ispaid_3">已支付</string>
    <string name="order_ispaid_4">已退款</string>
    <string name="order_ispaid_5">免支付</string>
    <string name="tg_status_1">进行中</string>
    <string name="tg_status_2">已完成 </string>
    <string name="tg_status_3">已取消 </string>
    <string name="tg_status_4">已终止 </string>
    <string name="tg_status_5">待确认</string>
    <string name="task_status_1">待确认</string>
    <string name="task_status_2">已确认</string>
    <string name="task_status_3">已执行 </string>
    <string name="task_status_4">已取消</string>
    <string name="order_filter_list_item1">订单分类</string>
    <string name="order_filter_list_item2">全部订单</string>
    <string name="order_filter_list_item3">已完成的订单</string>
    <string name="order_filter_list_item4">已支付的订单</string>
    <string name="order_filter_list_item5">未支付的订单</string>
    <string name="order_filter_list_item6">已取消的订单</string>
    <string name="product_type_status_0">服务</string>
    <string name="product_type_status_1">商品</string>
    <string name="product_type_status_0_cal">次/共</string>
    <string name="product_type_status_1_cal">件/共</string>
    <string name="product_type_status_0_unlimited">次/不限次</string>
    <string name="product_type_status_1_unlimited">件/无限交付</string>
    <string name="product_type_status_0_unit">次</string>
    <string name="product_type_status_1_unit">件</string>
    <string name="product_type_status_1_title">交付</string>
    <string name="total_orig_price_title">原价小计</string>
    <string name="total_memeber_sale_price_title">会员价</string>
    <string name="total_sale_price_title">成交价</string>
    <string name="hint_new_message">消息：</string>
    <string name="head_image">头像</string>
    <string name="password_setting">密码修改</string>
    <string name="old_password_title">旧密码</string>
    <string name="hint_old_password">旧密码</string>
    <string name="new_password_title">新密码</string>
    <string name="hint_new_password">6~10位新密码</string>
    <string name="confirm_new_password_title">新密码确认</string>
    <string name="hint_new_password_again">重复6~10位新密码</string>
    <string name="order_classify">订单分类</string>
    <string name="order_status">订单状态</string>
    <string name="order_pay_status">支付状态</string>
    <string name="order_classify_service">服务</string>
    <string name="order_classify_all">全部</string>
    <string name="order_classify_commodity">商品</string>
    <string name="order_classify_status_1">未完成</string>
    <string name="order_classify_status_2">已完成</string>
    <string name="order_classify_status_3">已取消</string>
    <string name="order_classify_status_4">已终止</string>
    <string name="order_pay_status_1">已支付</string>
    <string name="order_pay_status_2">未支付</string>
    <string name="about_us">关于我们</string>
    <string name="software_version">软件版本：v</string>
    <string name="company_website">All Rights Reserved</string>
    <string name="copyright_chinese">汉弘信息科技（上海）有限公司      版权所有</string>
    <string name="copyright_english">Copyright © 2014 HSquare</string>
    <string name="action_settings">Setting</string>
    <string name="promotion_contentdescription">Promotion</string>
    <string name="left_menu_homepage">首页</string>
    <string name="left_menu_title_13">门店</string>
    <string name="left_menu_title_3">服务团队</string>
    <string name="left_menu_commodity">商城</string>
    <string name="left_menu_cart">购物车</string>
    <string name="left_menu_order">订单</string>
    <string name="left_menu_ecard">e账户</string>
    <string name="left_menu_service">服务</string>
    <string name="left_menu_appointment">预约</string>
    <string name="left_menu_record">专业</string>
    <string name="left_menu_message">飞语</string>
    <string name="left_menu_promotion">促销</string>
    <string name="left_menu_remind">提醒</string>
    <string name="left_menu_photo_album">美丽记录</string>
    <string name="left_menu_setting">设置</string>
    <string name="left_menu_unpayment_order">待付款</string>
    <string name="left_menu_unconfirm_order">待确认</string>
    <string name="left_menu_title_12">登出</string>
    <string name="business_time">营业时间</string>
    <string name="contact_person">联系人</string>
    <string name="phone">电话</string>
    <string name="fax">传真</string>
    <string name="web_address">网址</string>
    <string name="address">地址</string>
    <string name="summary">简介</string>
    <string name="title">职称</string>
    <string name="department">部门</string>
    <string name="branch">所属门店</string>
    <string name="expert">擅长</string>
    <string name="introduction">简介</string>
    <string name="all_commodity">全部商品</string>
    <string name="all_service">全部服务</string>
    <string name="consult">咨询</string>
    <string name="suggest">建议</string>
    <string name="order_filter">订单筛选</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="notice_title">标题</string>
    <string name="time">时间</string>
    <string name="notice_content">内容</string>
    <string name="quantity">数量</string>
    <string name="sub_price">小计</string>
    <string name="total_price">总价</string>
    <string name="sale_price">优惠价</string>
    <string name="total_sale_price">成交价</string>
    <string name="review_comment_count">0/200</string>
    <string name="service_record">服务记录</string>
    <string name="finished_service_record">已完成服务记录</string>
    <string name="finished_commodity_record">已交付商品记录</string>
    <string name="buy_commodity">购买   </string>
    <string name="hint_payment_password">请输入密码</string>
    <string name="title_cancel_order">确认取消订单？</string>
    <string name="get_webservice_data_error">获取数据失败</string>
    <string name="get_webservice_data_null">您的网络貌似不给力，请检查网络设置！</string>
    <string name="updating_title">正在下载</string>
    <string name="current_version_title">当前版本:</string>
    <string name="new_version_title">发现新版本:</string>
    <string name="update_new_version">更新</string>
    <string name="cancel_update">暂不更新</string>
    <string name="update_software_title">软件更新</string>
    <string name="install_software_title">下载完成</string>
    <string name="install_software_content">是否安装新应用</string>
    <string name="remind_string_1">您预约在</string>
    <string name="member_discount_payment">会员价</string>
    <string name="title_order_payment_chosen">支付方式</string>
    <string name="title_order_payment_present">赠送</string>
    <string name="title_order_payment_bonus">赠送积分</string>
    <string name="title_order_payment_ticket">赠送现金券</string>
    <string name="balance_title">余额</string>
    <string name="card_type_title_1">储值卡</string>
    <string name="ecard_expirationtime_title">有效期</string>
    <string name="title_commodity_price">价格小计</string>
    <string name="title_choose_card_list_spinner">e账户</string>
    <string name="title_branch_name">购买门店</string>
	<string name="ok">确定</string>
	<string name="add_payment_btn_text">支付</string>
</resources>