<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".PasswordSettingActivity">
    <TableLayout
        android:id="@+id/layout"
        style="@style/table_layout_attrs" >

        <RelativeLayout
            android:id="@+id/layout_one"
            style="@style/relative_layout_has_child_attrs" >

            <TextView
                android:id="@+id/old_password_title"
                style="@style/relative_layout_left_child_attrs"
                android:text="@string/old_password_title"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/input_old_password"
                style="@style/relative_layout_right_child_attrs"
                android:gravity="right"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="20" 
                android:background="@null"/>
        </RelativeLayout>

       <View style="@style/divide_view"/>

        <RelativeLayout
            android:id="@+id/layout_two"
            style="@style/relative_layout_has_child_attrs" >

            <TextView
                android:id="@+id/new_password_title"
                style="@style/relative_layout_left_child_attrs"
                android:text="@string/new_password_title"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/input_new_password"
                style="@style/relative_layout_right_child_attrs"
                android:gravity="right"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="20" 
                android:background="@null"/>
        </RelativeLayout>

        <View style="@style/divide_view"/>

        <RelativeLayout
            android:id="@+id/layout_three"
            style="@style/relative_layout_has_child_attrs" >

            <TextView
                android:id="@+id/new_password_angin_title"
                style="@style/relative_layout_left_child_attrs"
                android:text="@string/confirm_new_password_title"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/input_new_password_again"
                style="@style/relative_layout_right_child_attrs"
                android:gravity="right"
                android:hint="@string/hint_new_password_again"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLength="20" 
                android:background="@null"/>
        </RelativeLayout>
    </TableLayout>

    <Button
        android:id="@+id/confirm_button"
        style="@style/add_favorite_btn"
        android:layout_width="match_parent"
        android:layout_below="@id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="#D5C5B5"
        android:text="@string/ok"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/white" />

</RelativeLayout>