<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/table_layout_attrs" >

    <RelativeLayout style="@style/relative_layout_has_child_attrs" >
        <TextView
            android:id="@+id/commodity_name_text"
            style="@style/relative_layout_left_child_attrs"
            android:text="@string/title_level" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#f4f4f4" >
    </View>

    <RelativeLayout style="@style/relative_layout_has_child_attrs" >
        <TextView
            android:id="@+id/amount_title_text"
            style="@style/relative_layout_left_child_attrs"
            android:text="@string/quantity"
            android:textColor="@color/text_color" />

        

        <TextView
            android:id="@+id/amount_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_marginright"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#f4f4f4" >
    </View>

    <RelativeLayout style="@style/relative_layout_has_child_attrs" >
        <TextView
            android:id="@+id/unit_title_text"
            style="@style/relative_layout_left_child_attrs"
            android:text="@string/title_commodity_price"
            android:textColor="@color/text_color" />
        <TextView
            android:id="@+id/unit_content_text"
            style="@style/relative_layout_right_child_attrs" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#f4f4f4" >
    </View>

    <RelativeLayout style="@style/relative_layout_has_child_attrs" >
        <TextView
            style="@style/relative_layout_left_child_attrs"
            android:text="@string/title_choose_card_list_spinner"
            android:textColor="@color/text_color" />

        <Spinner
            android:id="@+id/order_confirm_item_spinner"
            style="@style/relative_layout_right_child_attrs"
            android:background="@null"
            android:spinnerMode="dialog" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#f4f4f4" >
    </View>

    <RelativeLayout style="@style/relative_layout_has_child_attrs" >
        <TextView
            style="@style/relative_layout_left_child_attrs"
            android:text="@string/member_discount_payment"
            android:textColor="@color/text_color" />
        <TextView
            android:id="@+id/order_confirm_item_member_discount_payment"
            style="@style/relative_layout_right_child_attrs" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#f4f4f4" >
    </View>

    <RelativeLayout style="@style/relative_layout_has_child_attrs" >
        <TextView
            style="@style/relative_layout_left_child_attrs"
            android:text="@string/title_branch_name"
            android:textColor="@color/text_color" />
        <TextView
            android:id="@+id/order_confirm_item_branch_name_content"
            style="@style/relative_layout_right_child_attrs" />
    </RelativeLayout>

</TableLayout>
