<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".CustomerActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/scrollview_layout_marginbottom" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="vertical" >

                <TableLayout style="@style/table_layout_attrs" >

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            android:id="@+id/order_quantity_title"
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/title_order_quantity"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/order_quantity"
                            style="@style/relative_layout_right_child_attrs" />
                    </RelativeLayout>

                    <View style="@style/divide_view" />

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            android:id="@+id/order_totalprice_title"
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/commodity_order_totalprice_title"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/order_totalprice"
                            style="@style/relative_layout_right_child_attrs" />
                    </RelativeLayout>
                </TableLayout>

                <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                    <TextView
                        style="@style/relative_layout_left_child_attrs"
                        android:text="@string/title_order_payment_chosen"
                        android:textColor="@android:color/black" />
                </RelativeLayout>

                <TableLayout
                    style="@style/table_layout_attrs"
                    android:layout_marginTop="0dp" >

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            android:id="@+id/order_pay_add_cardtypename"
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/card_type_title_1"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/order_pay_card_name"
                            style="@style/relative_layout_right_child_attrs"
                            android:textColor="@color/text_color" />
                    </RelativeLayout>

                    <View style="@style/divide_view" />

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/balance_title"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/balance"
                            style="@style/relative_layout_right_child_attrs"
                            android:textColor="#FF0000" />
                    </RelativeLayout>

                    <View style="@style/divide_view" />

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/ecard_expirationtime_title"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/ecard_expirationtime"
                            style="@style/relative_layout_right_child_attrs" />

                        <ImageView
                            android:id="@+id/ecard_expiration_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="5dip"
                            android:layout_toLeftOf="@id/ecard_expirationtime"
                            android:src="@drawable/expirationtime_overdue_icon"
                            android:visibility="invisible" />
                    </RelativeLayout>

                    <View style="@style/divide_view" />

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/title_order_total_sale_price"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/order_pay_payment_price"
                            style="@style/relative_layout_right_child_attrs" />
                    </RelativeLayout>

                    <View style="@style/divide_view" />

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/title_order_price_capitalization"
                            android:textColor="@color/text_color" />

                        <TextView
                            android:id="@+id/order_pay_payment_price_capital"
                            style="@style/relative_layout_right_child_attrs" />
                    </RelativeLayout>
                </TableLayout>

                <LinearLayout
                    android:id="@+id/activity_order_pay_adding_payment_ticket_and_bonus_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                        <TextView
                            style="@style/relative_layout_left_child_attrs"
                            android:text="@string/title_order_payment_present"
                            android:textColor="@android:color/black" />
                    </RelativeLayout>

                    <TableLayout
                        android:id="@+id/pay_information"
                        style="@style/table_layout_attrs" >

                        <RelativeLayout
                            android:id="@+id/activity_order_pay_adding_paymtent_bonus_layout"
                            style="@style/relative_layout_has_child_attrs" >

                            <TextView
                                style="@style/relative_layout_left_child_attrs"
                                android:text="@string/title_order_payment_bonus"
                                android:textColor="@color/text_color" />

                            <TextView
                                android:id="@+id/order_payment_bonus"
                                style="@style/relative_layout_right_child_attrs"
                                android:textColor="#FF0000" />
                        </RelativeLayout>

                        <View
                            android:id="@+id/activity_order_pay_adding_paymtent_bonus_divider"
                            style="@style/divide_view" />

                        <RelativeLayout
                            android:id="@+id/activity_order_pay_adding_paymtent_ticket_layout"
                            style="@style/relative_layout_has_child_attrs" >

                            <TextView
                                style="@style/relative_layout_left_child_attrs"
                                android:text="@string/title_order_payment_ticket"
                                android:textColor="@color/text_color" />

                            <TextView
                                android:id="@+id/order_payment_ticket"
                                style="@style/relative_layout_right_child_attrs"
                                android:textColor="#FF0000" />
                        </RelativeLayout>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ensure_payment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#E9E0D6"
        android:gravity="center"
        android:orientation="vertical" >

        <View style="@style/divide_view" />

        <Button
            android:id="@+id/ensure_payment_btn"
            style="@style/add_favorite_btn"
            android:layout_width="match_parent"
            android:layout_margin="1dip"
            android:background="#D5C5B5"
            android:text="@string/add_payment_btn_text"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>