<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".NoticeDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/notice_title_and_time"
                style="@style/table_layout_attrs" >

                <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                    <TextView
                        style="@style/relative_layout_left_child_attrs"
                        android:text="@string/notice_title"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/notice_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:maxWidth="240dp"
                        android:singleLine="true"
                        android:text="@string/ellipsis"
                        android:textSize="@dimen/text_size_normal" />
                </RelativeLayout>

                <View style="@style/divide_view" />

                <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                    <TextView
                        style="@style/relative_layout_left_child_attrs"
                        android:text="@string/time"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/time_content_text"
                        style="@style/relative_layout_right_child_attrs" />
                </RelativeLayout>
            </TableLayout>

            <TableLayout
                android:id="@+id/notice_content"
                style="@style/table_layout_attrs" >

                <RelativeLayout style="@style/relative_layout_has_child_attrs" >

                    <TextView
                        style="@style/relative_layout_left_child_attrs"
                        android:text="@string/notice_content"
                        android:textColor="@color/text_color" />
                </RelativeLayout>

                <View style="@style/divide_view"/>
                <RelativeLayout style="@style/relative_layout_has_child_attrs"
                    			android:paddingTop="14dp"
                    			android:paddingBottom="0dp"
                    			android:paddingLeft="14dp"
                    			android:paddingRight="14dp">

                    <TextView
                        android:id="@+id/notice_content_text"
                        style="@style/relative_layout_left_child_attrs"
                        android:lineSpacingExtra="8dp"/>
                </RelativeLayout>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>